--- a/assignment1/task2c.ipynb
+++ b/assignment1/task2c.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -17,7 +21,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "im = read_im(pathlib.Path(\"images\", \"lake.jpg\"))\n",
@@ -27,7 +35,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "def convolve_im(im, kernel,\n",
@@ -41,15 +53,38 @@
     "    Returns:\n",
     "        [type]: [np.array of shape [H, W, 3]. should be same as im]\n",
     "    \"\"\"\n",
-    "    assert len(im.shape) == 3\n",
+    "    def k(y, x, c):\n",
+    "        m = kernel.shape[0] // 2\n",
+    "        res = 0\n",
+    "        for t in range(-m, m + 1):\n",
+    "            if y + t < 0 or y + t >= im.shape[0]:\n",
+    "                continue\n",
+    "            for s in range(-m, m + 1):\n",
+    "                if x + s < 0 or x + s >= im.shape[1]:\n",
+    "                    continue\n",
+    "                res += kernel[m - t][m - s] * im[y + t][x + s][c]\n",
+    "        return res\n",
     "\n",
-    "    return im"
+    "    con = np.empty(im.shape, im.dtype)\n",
+    "\n",
+    "    it = np.nditer(im, flags=['multi_index'])\n",
+    "    for _ in it:\n",
+    "        y, x, c = it.multi_index\n",
+    "        con[y][x][c] = k(y, x, c)\n",
+    "\n",
+    "    assert len(con.shape) == 3\n",
+    "\n",
+    "    return con"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Define the convolutional kernels\n",
@@ -81,7 +116,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "plt.subplot(1, 2, 1)\n",
@@ -93,7 +132,13 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "name": "python3",
+   "language": "python",
+   "display_name": "Python 3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
